--- a/Page Wire/BookResults/Views/BookResultsCollectionViewCell.xib
+++ b/Page Wire/BookResults/Views/BookResultsCollectionViewCell.xib
@@ -12,25 +12,25 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookResultsCollectionViewCell" id="gTV-IL-0wX" customClass="BookResultsCollectionViewCell" customModule="Page_Wire" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="274" height="305"/>
+            <rect key="frame" x="0.0" y="0.0" width="274" height="373"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="274" height="305"/>
+                <rect key="frame" x="0.0" y="0.0" width="274" height="373"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bGo-K8-bqm">
-                        <rect key="frame" x="0.0" y="0.0" width="274" height="305"/>
+                        <rect key="frame" x="0.0" y="0.0" width="274" height="373"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9jE-iw-gq1">
-                                <rect key="frame" x="87" y="25" width="100" height="147.5"/>
+                                <rect key="frame" x="62" y="41" width="150" height="197.5"/>
                                 <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="ia8-AK-FGW"/>
-                                    <constraint firstAttribute="height" constant="150" id="l7Z-Dt-7bf"/>
+                                    <constraint firstAttribute="width" constant="150" id="ia8-AK-FGW"/>
+                                    <constraint firstAttribute="height" constant="200" id="l7Z-Dt-7bf"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="I2q-bA-Fxv">
-                                <rect key="frame" x="16" y="182" width="242" height="61.5"/>
+                                <rect key="frame" x="16" y="272" width="242" height="58"/>
                                 <subviews>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PQT-D9-tLL">
                                         <rect key="frame" x="0.0" y="0.0" width="242" height="24"/>
@@ -39,8 +39,8 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSr-4I-2Gj">
-                                        <rect key="frame" x="0.0" y="40" width="242" height="21.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                        <rect key="frame" x="0.0" y="40" width="242" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -49,8 +49,8 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="9jE-iw-gq1" firstAttribute="top" secondItem="bGo-K8-bqm" secondAttribute="top" constant="24" id="00w-yB-eYx"/>
-                            <constraint firstItem="I2q-bA-Fxv" firstAttribute="top" secondItem="9jE-iw-gq1" secondAttribute="bottom" constant="8" id="7GZ-Va-N5u"/>
+                            <constraint firstItem="9jE-iw-gq1" firstAttribute="top" secondItem="bGo-K8-bqm" secondAttribute="top" constant="40" id="00w-yB-eYx"/>
+                            <constraint firstItem="I2q-bA-Fxv" firstAttribute="top" secondItem="9jE-iw-gq1" secondAttribute="bottom" constant="32" id="7GZ-Va-N5u"/>
                             <constraint firstAttribute="trailing" secondItem="I2q-bA-Fxv" secondAttribute="trailing" constant="16" id="OaV-my-0zB"/>
                             <constraint firstItem="9jE-iw-gq1" firstAttribute="centerX" secondItem="bGo-K8-bqm" secondAttribute="centerX" id="cfC-AJ-xCP"/>
                             <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="I2q-bA-Fxv" secondAttribute="bottom" constant="32" id="fff-RY-VAD"/>
@@ -67,13 +67,13 @@
                 <constraint firstItem="bGo-K8-bqm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="iBa-Kp-Trl"/>
                 <constraint firstItem="bGo-K8-bqm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mzl-jx-rE6"/>
             </constraints>
-            <size key="customSize" width="274" height="305"/>
+            <size key="customSize" width="274" height="373"/>
             <connections>
                 <outlet property="artwork" destination="9jE-iw-gq1" id="dli-MO-EtL"/>
                 <outlet property="authorLabel" destination="RSr-4I-2Gj" id="ME0-9T-rhj"/>
                 <outlet property="titleLabel" destination="PQT-D9-tLL" id="NmI-Yf-08I"/>
             </connections>
-            <point key="canvasLocation" x="320.28985507246381" y="199.21875"/>
+            <point key="canvasLocation" x="320.28985507246381" y="221.98660714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
