--- a/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
+++ b/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
@@ -9,31 +9,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="137" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="334" height="137"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookResultsTableViewCell" rowHeight="145" id="oqw-cy-Qwh" customClass="BookResultsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="334" height="145"/>
             <autoresizingMask key="autoresizingMask"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oqw-cy-Qwh" id="I6t-qC-jb4">
-                <rect key="frame" x="0.0" y="0.0" width="334" height="137"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oqw-cy-Qwh" id="I6t-qC-jb4">
+                <rect key="frame" x="0.0" y="0.0" width="334" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VMv-aq-eeq">
-                        <rect key="frame" x="8" y="21.666666666666657" width="65" height="98"/>
+                        <rect key="frame" x="8" y="21.666666666666657" width="65" height="97"/>
                         <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="100" id="14n-vK-RBj"/>
                             <constraint firstAttribute="width" constant="65" id="4YY-eq-rQS"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
-                        <rect key="frame" x="89" y="20" width="221" height="101"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
+                        <rect key="frame" x="89" y="42.333333333333329" width="221" height="55.333333333333329"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-4i-NdS">
-                                <rect key="frame" x="0.0" y="0.0" width="221" height="50.666666666666664"/>
+                                <rect key="frame" x="0.0" y="0.0" width="221" height="21.666666666666668"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzm-9y-3Pa">
-                                <rect key="frame" x="0.0" y="50.666666666666671" width="221" height="50.333333333333329"/>
+                                <rect key="frame" x="0.0" y="33.666666666666664" width="221" height="21.666666666666664"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -44,10 +45,8 @@
                 <constraints>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="leading" secondItem="VMv-aq-eeq" secondAttribute="trailing" constant="16" id="56a-GI-Inz"/>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="8jU-Te-itK"/>
-                    <constraint firstItem="46b-Xt-TFA" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="Poe-np-PtH"/>
                     <constraint firstAttribute="bottom" secondItem="VMv-aq-eeq" secondAttribute="bottom" constant="16" id="UU9-Ki-svg"/>
                     <constraint firstAttribute="trailing" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="24" id="bvc-hE-kuV"/>
-                    <constraint firstAttribute="bottom" secondItem="46b-Xt-TFA" secondAttribute="bottom" constant="16" id="glG-8J-OLz"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="tKm-nn-uWn"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="leading" secondItem="I6t-qC-jb4" secondAttribute="leading" constant="8" id="zMS-Wq-Nce"/>
                 </constraints>
@@ -57,7 +56,7 @@
                 <outlet property="authorLabel" destination="nzm-9y-3Pa" id="zch-M9-RV7"/>
                 <outlet property="titleLabel" destination="oRU-4i-NdS" id="dF4-bv-elN"/>
             </connections>
-            <point key="canvasLocation" x="147.69230769230768" y="26.658767772511847"/>
+            <point key="canvasLocation" x="147.69230769230768" y="29.502369668246445"/>
         </tableViewCell>
     </objects>
     <resources>
